--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,4 +1,9 @@
 .sign-in {
- width: 30vw;  
+ width: 30vw; 
+ disply: flex;
+ flex-direction: column;  
     
+    .title {
+        margin:10px 0;
+    }
 }
