--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -12,6 +12,8 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
+      
+      
 
     .header-block {
       text-transform: capitalize;
@@ -28,4 +30,16 @@
     margin-left: auto;
     font-size: 36px;
   }
+    
+    button {
+        margin-top: 25px;
+     
+    }
+    
+  .test-warning {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 24px;
+      color: red;
+   }
 }
